# primary-shell

./: Cargo.toml  flake.nix
.bin/: qmlls
nix/modules/: devshell.nix  rust.nix
qml/: .qmlls.ini  background.qml  shell.qml
qml/Border/: Border.qml  qmldir
qml/SideBar/: SideBar.qml  SideBarState.qml  qmldir
qml/SideBar/SideBarToggle/: SideBarToggle.qml  qmldir
qml/Theme/: Theme.qml
qml/TopBar/: TopBar.qml
qml/TopBar/TopBarLeft/: HyprWorkspaces.qml  TopBarLeft.qml  qmldir
qml/TopBar/TopBarRight/: DateTime.qml  TopBarRight.qml
qml/assets/shaders/: border.frag  border.frag.qsb  innershadow.frag  innershadow.frag.qsb
src/: main.rs
