[package]
authors = ["KitoWasHere"]
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "primary-shell"
description = "Shell made with Rust and Quickshell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.44"
